--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <head>
   <script src='setup.js'></script>
-  <script src='neuralNetwork'></script>
+  <script src='neuralNetwork.js'></script>
   <script src="script.js"></script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
